--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,29 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!doctype html>
+<html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
-    {% include sidebar.html %}
+  <div class="container content">
+    <header class="masthead">
+      <h3 class="masthead-title">
+        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+        <small>{{ site.tagline }}</small>
+      </h3>
+    </header>
 
-    <div class="content container">
+    <main>
       {{ content }}
-    </div>
+    </main>
 
-  </body>
+    <footer class="footer">
+      <small>
+        &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights
+        reserved.
+      </small>
+    </footer>
+  </div>
+</body>
+
 </html>
