--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,19 @@
 
     <main>
       {{ content }}
+      <div class="posts">
+        {% for post in paginator.posts %}
+        <article class="post">
+          <h1 class="post-title">
+            <a href="{{ post.url | relative_url }}">
+              {{ post.title }}
+            </a>
+          </h1>
+
+          {{ post.content }}
+        </article>
+        {% endfor %}
+      </div>
     </main>
 
     <footer class="footer">
